[package]
name = "server"
version = "0.1.0"
edition = "2021"
description = "Server workspace of benin-db"
documentation = "https://github.com/sahilpabale/benin-db/blob/dev/server/README.md"
homepage = "https://github.com/sahilpabale/benin-db/blob/dev/server"
repository = "https://github.com/sahilpabale/benin-db/"
keywords = ["redis", "caching db", "caching database", "database", "rust database", "rust"]
categories = ["caching", "database", "database-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }